--- a/app/HTML/ticket.html
+++ b/app/HTML/ticket.html
@@ -21,7 +21,12 @@
         <h2>Ticket ID: 1</h2>
         <h3>Title: Example Ticket</h3>
         <p>Description: This is an example ticket description.</p>
-        <p>Status: Open</p>
+        <p>Status: Novo</p>
+        <p>Data Abertura: 2023-07-16</p>
+        <p>Data Fechamento: N/A</p>
+        <p>Autor: Cleitin </p>
+        <p>Atendente : </p>
+    </div>
     </div>
 </body>
 </html>
