--- a/app/HTML/ticket.html
+++ b/app/HTML/ticket.html
@@ -1,19 +1,58 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Ticket Details</title>
     <style>
-        /* Add your CSS here */
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        header {
+            background-color: #f8f9fa;
+            padding: 10px 0;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            text-align: center;
+        }
+
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: #333;
+            text-decoration: none;
+        }
+
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+
+        div {
+            width: 80%;
+            margin: 0 auto;
+        }
+
+        div h2,
+        div h3,
+        div p {
+            color: #333;
+        }
     </style>
 </head>
+
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Tickets</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+                <li><a href="home.html">Home</a></li>
+                
         </nav>
     </header>
     <h1>Ticket Details</h1>
@@ -29,4 +68,5 @@
     </div>
     </div>
 </body>
+
 </html>
