--- a/app/HTML/ticket.html
+++ b/app/HTML/ticket.html
@@ -6,10 +6,14 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f9fa;
         }
 
         header {
-            background-color: #f8f9fa;
+            background-color: #333;
+            color: #fff;
             padding: 10px 0;
         }
 
@@ -25,25 +29,55 @@
         }
 
         nav ul li a {
-            color: #333;
+            color: #fff;
             text-decoration: none;
+            background-color: #4CAF50;
+            border-radius: 10%;
         }
 
-        h1 {
-            color: #333;
+        main {
+            padding: 20px;
             text-align: center;
+            min-height: calc(100vh - 60px);
         }
 
-        div {
-            width: 80%;
-            margin: 0 auto;
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
 
-        div h2,
-        div h3,
-        div p {
-            color: #333;
+        button {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
         }
+
+        .ticket-details {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .ticket-details div {
+            width: 50%;
+            padding: 10px;
+        }
+       h1{
+        text-align: center;
+       }
     </style>
 </head>
 
@@ -52,21 +86,31 @@
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
-                
+
         </nav>
     </header>
     <h1>Ticket Details</h1>
-    <div>
+    <div class="ticket-details">
         <h2>Ticket ID: 1</h2>
         <h3>Title: Example Ticket</h3>
         <p>Description: This is an example ticket description.</p>
         <p>Status: Novo</p>
+        <select id="category" name="category">
+            <option value="">Selecione o status</option>
+            <option value="Em atendimento">Em atendimento</option>
+            <option value="Resolvido">Resolvido</option>
+        </select><br>
         <p>Data Abertura: 2023-07-16</p>
         <p>Data Fechamento: N/A</p>
         <p>Autor: Cleitin </p>
         <p>Atendente : </p>
+        <button class="delete-button">Delete Ticket</button>
     </div>
-    </div>
+
+
+    <footer>
+        <p>© 2023 Helpdesk. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
