--- a/app/HTML/newTicket.html
+++ b/app/HTML/newTicket.html
@@ -142,6 +142,8 @@
         <input type="time" id="creationTime" name="creationTime"><br>
         <label for="author">Autor:</label><br>
         <input type="text" id="author" name="author"><br>
+        <label for="deadline">Prazo para solução:</label><br>
+        <input type="date" id="deadline" name="deadline"><br>
         <button>Criar</button>
     </form>
     <footer>
