--- a/app/HTML/ticket.html
+++ b/app/HTML/ticket.html
@@ -86,8 +86,8 @@
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
-
         </nav>
+       
     </header>
     <h1>Ticket Details</h1>
     <div class="ticket-details">
@@ -104,7 +104,8 @@
         <p>Data Fechamento: N/A</p>
         <p>Autor: Cleitin </p>
         <p>Atendente : </p>
-        <button class="delete-button">Delete Ticket</button>
+        <button class="delete-button">Excluir Ticket</button>
+        <button class="save">Salvar </button>
     </div>
 
 
