--- a/app/HTML/home.html
+++ b/app/HTML/home.html
@@ -3,83 +3,8 @@
 
 <head>
     <title>GustavoDesk</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f9fa;
-        }
+    <link rel="stylesheet" type="text/css" href="C:\Users\gustavo.ozorio\OneDrive - PRESTES\Documentos\ProjetoPY-master\app\static\css\home.css" media="screen" />
 
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            text-align: center;
-        }
-
-        nav ul li {
-            display: inline;
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-
-        main {
-            padding: 20px;
-            text-align: center;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        tbody {
-            background-color: #fff;
-            color: #333;
-        }
-
-        tr {
-            text-align: center;
-        }
-
-        table {
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 25px;
-            border-collapse: collapse;
-            width: 80%;
-        }
-
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
-
-        th {
-            padding-top: 12px;
-            padding-bottom: 12px;
-            text-align: left;
-            background-color: #333;
-            color: white;
-        }
-
-        td:hover {background-color: #a4f376;}
-    </style>
 </head>
 
 <body>
@@ -89,6 +14,11 @@
                 <h1>GustavoDesk</h1>
                 <button >Novo Chamado</button>
             </ul>
+            <nav>
+                <ul>
+                    <li><a href="login.html">Logout</a></li>
+                </ul>
+            </nav>
 
         </nav>
     </header>
