--- a/app/HTML/home.html
+++ b/app/HTML/home.html
@@ -17,6 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="login.html">Logout</a></li>
+                    <li style="float:right"><a href="#">Logout</a></li>
                 </ul>
             </nav>
 
