--- a/app/HTML/newTicket.html
+++ b/app/HTML/newTicket.html
@@ -119,6 +119,7 @@
         <nav>
             <ul>
                 <button>Voltar aos Chamados</button>
+                <li style="float:right"><a href="#">Logout</a></li>
             </ul>
 
         </nav>
