--- a/app/HTML/ticket.html
+++ b/app/HTML/ticket.html
@@ -86,6 +86,7 @@
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
+                <li style="float:right"><a href="#">Logout</a></li>
         </nav>
        
     </header>
